engines/wedding-atelier/app/assets/stylesheets/wedding-atelier/components/react/customization_experience/_dress-preview.scss
.dress-preview {
  height: 400px;
  position: relative;

  .preview {
    height: 100%;
    margin: 0 auto;
    max-width: 100%;
    position: relative;
    overflow: hidden;

    img {
      cursor: zoom-in;
      @include screen-sm {
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translateX(-50%) translateY(-50%);
      };
    }
  }

  img {
    height: 100%;
    margin: 0 auto;
  }

  .dress-preview-controls {
    position: absolute;
    right: 45px;
    top: 45px;
    width: 45px;
  }

  .dress-preview-details {
    background-color: $white-two-transparent;
    border: 1px solid $pinkish-grey;
    position: absolute;
    right: 0;
    text-align: center;
    width: 355px;

    &-close {
      background: transparent image-url('wedding-atelier/close.svg') center center no-repeat;
      cursor: pointer;
      height: 32px;
      position: absolute;
      right: 12px;
      top: 12px;
      width: 32px;
    }

    &-container {
      padding: 45px 50px 0
    }

    &-title {
    	font-family: $secondary-font;
    	font-size: 14px;
    	line-height: 1.36;
    	letter-spacing: 0.9px;
    	color: $black;
      font-weight: bold;
    }

    &-disclaimer {
      font-family: $secondary-font;
      font-size: 12px;
      line-height: 1.17;
      color: $boulder-two;
    }

    &-text-long {
      font-size: 16px;
      font-weight: 300;
      line-height: 1.75;
      color: $black;
      font-family: $primary-font;

      p {
        margin-bottom: 30px;
      }
    }

    &-text-short {
      display: block;
      font-weight: 700;
      font-size: .8rem;
      margin: 0 auto;
      max-width: 140px;
      text-transform: uppercase;
    }
  }


  .dress-preview-zoom-in {
    background: transparent image-url('wedding-atelier/plus.svg') center center no-repeat;
    cursor: pointer;
    height: 32px;
    margin-bottom: 35px;
  }

  .dress-preview-pagination {
    bottom: 0;
    position: absolute;
    right: 0;
  }

  .dress-preview-thumbnails {
    list-style: none;
    max-width: 45px;
    padding-left: 0;
    margin-right: 45px;
  }

  .dress-preview-thumbnails-item {
    cursor: pointer;
    display: inline-block;
    margin-bottom: 25px;
    padding-left: 0;

    &.selected {
      outline: 1px solid $black;
    }

    img {
      height: 65px;
      width: 45px;
    }
  }

  @include screen-sm {
    height: 100%;
  }

}

